[package]
name = "file_safe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "safe-encrypt"
path = "src/encrypt.rs"

[[bin]]
name = "safe-decrypt"
path = "src/decrypt.rs"

[[bin]]
name = "safe-init"
path = "src/init.rs"

[dependencies]
simple_crypt = "0.2.3"
home = "0.5.9"